test/TestPhases/typechecker/valid/diamondimport_1.blc
import internal c "../imports/client_1" // imports service itself
import s "../imports/service"

@[EntryPoint]
activity Main ()
    await true
end